force-app/main/default/objects/nFORCE__Brand__c/nFORCE__Brand__c.object-meta.xml
<CustomObject>
    <description>The Customer Engagement Solution uses this object to create Brands. The Brand contains styling information specific to an Institution. One financial institution can offer multiple Institutions, each styled to meet its individual branding requirements.</description>
    <label>Brand</label>
    <nameField>
        <label>Brand</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>