force-app/main/default/objects/nFORCE__Brand__c/fields/nFORCE__Brand_JSON__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Brand_JSON__c</fullName>
    <description>Use this text field to store the JSON data that determines the branding style.</description>
    <inlineHelpText>Use this text field to store the JSON data that determines the branding style.</inlineHelpText>
    <label>Brand JSON</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>