force-app/main/default/objects/nFORCE__Brand__c/fields/nFORCE__Description__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Description__c</fullName>
    <description>Manually populate this text field with a description of the brand.</description>
    <inlineHelpText>Enter a description of the brand so you can keep track of what the brand is used for.</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>