force-app/main/default/objects/nFORCE__Brand__c/fields/nFORCE__Is_Applied__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, applies this brand to the entire Customer Engagement Solution when the custom setting &quot;Multiple Institutions Enabled&quot; is disabled. If “Multiple Institutions Enabled” is enabled, the brand specified for each institution overrides this flag.</description>
    <inlineHelpText>When selected, applies this brand to the entire Customer Engagement Solution when the custom setting &quot;Multiple Institutions Enabled&quot; is disabled. If “Multiple Institutions Enabled” is enabled, the brand specified for each institution overrides this flag.</inlineHelpText>
    <label>Is Applied</label>
    <type>Checkbox</type>
</CustomField>